feat(BCHEP-638): Implement 2 APIs. One to retrieve the requirement blocks and valid field options for a specific template version and one to retrieve the requirement blocks and valid field options for all current published templates
